--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,5 +11,5 @@ RUN if [ -f "/tmp/conda-tmp/environment.yml" ]; then umask 0002 && /opt/conda/bi
 
 RUN apt-get update && apt-get -y install --no-install-recommends \
   less wget python3-pip
-RUN conda install -n base h5py matplotlib h5netcdf xarray
+RUN conda install -n base ipykernel h5py matplotlib h5netcdf xarray
 RUN pip3 install h5pyd s3fs
