--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,11 @@
 {
   "name": "SEEKCommons Workshop Training",
+  "hostRequirements": {
+    "cpus": 4
+  },
   "dockerComposeFile": "docker-compose.yaml",
-  "postCreateCommand": "conda init",
+  "updateContentCommand": "python3 -m pip install -r requirements.txt",
+  "postCreateCommand": "",
   "service": "app",
 	"workspaceFolder": "/workspace",
 	"forwardPorts": [5101],
@@ -12,19 +16,14 @@
     "ghcr.io/devcontainers/features/docker-outside-of-docker": {}
   },
   "customizations": {
+    "codespaces": {
+      "openFiles": []
+    },
     "vscode": {
       "extensions": [
           "ms-python.python",
-          "ms-toolsai.jupyter",
-          "ms-vscode.cpptools",
-          "h5web.vscode-h5web",
-          "davidanson.vscode-markdownlint"
+          "ms-toolsai.jupyter"
           ],
-      "settings": {
-	      "python.defaultInterpreterPath": "/opt/conda/envs/hdf5-tutorial/python",
-        "python.languageServer": "Default",
-        "terminal.integrated.shell.linux": "/bin/bash"
-      }
     }
   }
 }
